@@ -1,3 +1,10 @@
+2007-08-29  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+	  src/other-network-dialog.c
+	  src/menu-items.c
+		- Adjust for new AP flags
+
 2007-08-22  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
